fixes canvas display bug (stack overflow), control panel now displays properly on image pages, and adds ability to hide and show the toolbar from the browserAction

--- a/contentscript.css
+++ b/contentscript.css
@@ -1,18 +1,19 @@
 .getyourcrayon-menubar {
-  border: solid black 1px;
-  background-color:white;
-  width:200px;
-  position: absolute;
-  top: 50px;
-  left:20px;
-  z-index:1001;
+  border: solid black 1px !important;
+  background-color:white !important;
+  width:200px !important;
+  position: absolute !important;
+  top: 50px ;
+  left:20px ;
+  z-index:1001 !important;
 }
 
 #myCanvas {
-  border:dashed black 1px;
-  position: absolute;
-  top:0px;
-  z-index:1000;
+  border:dashed black 1px ;
+  position: absolute ;
+  top:0px ;
+  left:0px ;
+  z-index:1000 ;
 }
 
 .gyc-btn {
@@ -29,4 +30,8 @@ cursor: pointer !important;
 border: 1px solid rgba(0, 0, 0, 0) !important;
 border-radius: 4px !important;
 background-color: #aaa !important;
+}
+
+#toolbar-header {
+  height: 50px !important;
 }
